TRENTOOL2/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    ENDFOR
    ENDIF
    ENDWHILE
    ENDFUNCTION

Grammar

Rule 0     S' -> top
Rule 1     top -> <empty>
Rule 2     top -> stmt_list
Rule 3     top -> top func_decl stmt_list_opt
Rule 4     top -> top func_decl stmt_list END_STMT semi_opt
Rule 5     semi_opt -> <empty>
Rule 6     semi_opt -> semi_opt SEMI
Rule 7     semi_opt -> semi_opt COMMA
Rule 8     stmt -> let
Rule 9     stmt -> continue_stmt
Rule 10    stmt -> break_stmt
Rule 11    stmt -> expr_stmt
Rule 12    stmt -> global_stmt
Rule 13    stmt -> command
Rule 14    stmt -> for_stmt
Rule 15    stmt -> if_stmt
Rule 16    stmt -> null_stmt
Rule 17    stmt -> return_stmt
Rule 18    stmt -> switch_stmt
Rule 19    stmt -> try_catch
Rule 20    stmt -> while_stmt
Rule 21    arg1 -> STRING
Rule 22    arg1 -> NUMBER
Rule 23    arg1 -> IDENT
Rule 24    arg1 -> GLOBAL
Rule 25    args -> arg1
Rule 26    args -> args arg1
Rule 27    command -> ident args SEMI
Rule 28    global_list -> ident
Rule 29    global_list -> global_list ident
Rule 30    global_stmt -> GLOBAL global_list SEMI
Rule 31    return_stmt -> RETURN SEMI
Rule 32    continue_stmt -> CONTINUE SEMI
Rule 33    break_stmt -> BREAK SEMI
Rule 34    switch_stmt -> SWITCH expr semi_opt case_list END_STMT
Rule 35    case_list -> <empty>
Rule 36    case_list -> CASE expr sep stmt_list_opt case_list
Rule 37    case_list -> OTHERWISE stmt_list
Rule 38    try_catch -> TRY stmt_list CATCH stmt_list END_STMT
Rule 39    null_stmt -> SEMI
Rule 40    null_stmt -> COMMA
Rule 41    func_decl -> FUNCTION ident args_opt SEMI
Rule 42    func_decl -> FUNCTION ret = ident args_opt SEMI
Rule 43    args_opt -> <empty>
Rule 44    args_opt -> LPAREN RPAREN
Rule 45    args_opt -> LPAREN arg_list RPAREN
Rule 46    arg_list -> ident
Rule 47    arg_list -> ident = expr
Rule 48    arg_list -> arg_list COMMA ident
Rule 49    arg_list -> arg_list COMMA ident = expr
Rule 50    ret -> ident
Rule 51    ret -> LBRACKET RBRACKET
Rule 52    ret -> LBRACKET expr_list RBRACKET
Rule 53    stmt_list_opt -> <empty>
Rule 54    stmt_list_opt -> stmt_list
Rule 55    stmt_list -> stmt
Rule 56    stmt_list -> stmt_list stmt
Rule 57    concat_list -> expr_list SEMI expr_list
Rule 58    concat_list -> concat_list SEMI expr_list
Rule 59    expr_list -> exprs
Rule 60    expr_list -> exprs COMMA
Rule 61    exprs -> expr
Rule 62    exprs -> exprs COMMA expr
Rule 63    expr_stmt -> expr_list SEMI
Rule 64    while_stmt -> WHILE expr SEMI stmt_list END_STMT
Rule 65    sep -> COMMA
Rule 66    sep -> SEMI
Rule 67    if_stmt -> IF expr sep stmt_list_opt elseif_stmt END_STMT
Rule 68    if_stmt -> IF expr error stmt_list_opt elseif_stmt END_STMT
Rule 69    elseif_stmt -> <empty>
Rule 70    elseif_stmt -> ELSE stmt_list_opt
Rule 71    elseif_stmt -> ELSEIF expr sep stmt_list_opt elseif_stmt
Rule 72    let -> expr = expr SEMI
Rule 73    for_stmt -> FOR ident = expr SEMI stmt_list END_STMT
Rule 74    for_stmt -> FOR LPAREN ident = expr RPAREN SEMI stmt_list END_STMT
Rule 75    expr -> ident
Rule 76    expr -> end
Rule 77    expr -> number
Rule 78    expr -> string
Rule 79    expr -> colon
Rule 80    expr -> matrix
Rule 81    expr -> cellarray
Rule 82    expr -> expr2
Rule 83    expr -> expr1
Rule 84    expr -> lambda_expr
Rule 85    expr -> NE
Rule 86    lambda_args -> LPAREN RPAREN
Rule 87    lambda_args -> LPAREN arg_list RPAREN
Rule 88    lambda_expr -> HANDLE lambda_args expr
Rule 89    ident -> IDENT
Rule 90    number -> NUMBER
Rule 91    end -> END_EXPR
Rule 92    string -> STRING
Rule 93    colon -> COLON
Rule 94    expr1 -> MINUS expr
Rule 95    expr1 -> PLUS expr
Rule 96    expr1 -> NEG expr
Rule 97    expr1 -> HANDLE ident
Rule 98    cellarray -> LBRACE RBRACE
Rule 99    cellarray -> LBRACE expr_list RBRACE
Rule 100   matrix -> LBRACKET RBRACKET
Rule 101   matrix -> LBRACKET concat_list RBRACKET
Rule 102   matrix -> LBRACKET concat_list SEMI RBRACKET
Rule 103   matrix -> LBRACKET expr_list RBRACKET
Rule 104   matrix -> LBRACKET expr_list SEMI RBRACKET
Rule 105   expr -> LPAREN expr RPAREN
Rule 106   expr -> expr FIELD
Rule 107   expr -> expr TRANSPOSE
Rule 108   expr -> expr LBRACE expr_list RBRACE
Rule 109   expr -> expr LBRACE RBRACE
Rule 110   expr -> expr LPAREN expr_list RPAREN
Rule 111   expr -> expr LPAREN RPAREN
Rule 112   expr2 -> expr AND expr
Rule 113   expr2 -> expr ANDAND expr
Rule 114   expr2 -> expr BACKSLASH expr
Rule 115   expr2 -> expr COLON expr
Rule 116   expr2 -> expr DIV expr
Rule 117   expr2 -> expr DOT expr
Rule 118   expr2 -> expr DOTDIV expr
Rule 119   expr2 -> expr DOTEXP expr
Rule 120   expr2 -> expr DOTMUL expr
Rule 121   expr2 -> expr EQ expr
Rule 122   expr2 -> expr EXP expr
Rule 123   expr2 -> expr GE expr
Rule 124   expr2 -> expr GT expr
Rule 125   expr2 -> expr LE expr
Rule 126   expr2 -> expr LT expr
Rule 127   expr2 -> expr MINUS expr
Rule 128   expr2 -> expr MUL expr
Rule 129   expr2 -> expr NE expr
Rule 130   expr2 -> expr OR expr
Rule 131   expr2 -> expr OROR expr
Rule 132   expr2 -> expr PLUS expr

Terminals, with rules where they appear

=                    : 42 47 49 72 73 74
AND                  : 112
ANDAND               : 113
BACKSLASH            : 114
BREAK                : 33
CASE                 : 36
CATCH                : 38
COLON                : 93 115
COMMA                : 7 40 48 49 60 62 65
CONTINUE             : 32
DIV                  : 116
DOT                  : 117
DOTDIV               : 118
DOTEXP               : 119
DOTMUL               : 120
ELSE                 : 70
ELSEIF               : 71
ENDFOR               : 
ENDFUNCTION          : 
ENDIF                : 
ENDWHILE             : 
END_EXPR             : 91
END_STMT             : 4 34 38 64 67 68 73 74
EQ                   : 121
EXP                  : 122
FIELD                : 106
FOR                  : 73 74
FUNCTION             : 41 42
GE                   : 123
GLOBAL               : 24 30
GT                   : 124
HANDLE               : 88 97
IDENT                : 23 89
IF                   : 67 68
LBRACE               : 98 99 108 109
LBRACKET             : 51 52 100 101 102 103 104
LE                   : 125
LPAREN               : 44 45 74 86 87 105 110 111
LT                   : 126
MINUS                : 94 127
MUL                  : 128
NE                   : 85 129
NEG                  : 96
NUMBER               : 22 90
OR                   : 130
OROR                 : 131
OTHERWISE            : 37
PLUS                 : 95 132
RBRACE               : 98 99 108 109
RBRACKET             : 51 52 100 101 102 103 104
RETURN               : 31
RPAREN               : 44 45 74 86 87 105 110 111
SEMI                 : 6 27 30 31 32 33 39 41 42 57 58 63 64 66 72 73 74 102 104
STRING               : 21 92
SWITCH               : 34
TRANSPOSE            : 107
TRY                  : 38
WHILE                : 64
error                : 68

Nonterminals, with rules where they appear

arg1                 : 25 26
arg_list             : 45 48 49 87
args                 : 26 27
args_opt             : 41 42
break_stmt           : 10
case_list            : 34 36
cellarray            : 81
colon                : 79
command              : 13
concat_list          : 58 101 102
continue_stmt        : 9
elseif_stmt          : 67 68 71
end                  : 76
expr                 : 34 36 47 49 61 62 64 67 68 71 72 72 73 74 88 94 95 96 105 106 107 108 109 110 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132
expr1                : 83
expr2                : 82
expr_list            : 52 57 57 58 63 99 103 104 108 110
expr_stmt            : 11
exprs                : 59 60 62
for_stmt             : 14
func_decl            : 3 4
global_list          : 29 30
global_stmt          : 12
ident                : 27 28 29 41 42 46 47 48 49 50 73 74 75 97
if_stmt              : 15
lambda_args          : 88
lambda_expr          : 84
let                  : 8
matrix               : 80
null_stmt            : 16
number               : 77
ret                  : 42
return_stmt          : 17
semi_opt             : 4 6 7 34
sep                  : 36 67 71
stmt                 : 55 56
stmt_list            : 2 4 37 38 38 54 56 64 73 74
stmt_list_opt        : 3 36 67 68 70 71
string               : 78
switch_stmt          : 18
top                  : 3 4 0
try_catch            : 19
while_stmt           : 20

Parsing method: LALR

state 0

    (0) S' -> . top
    (1) top -> .
    (2) top -> . stmt_list
    (3) top -> . top func_decl stmt_list_opt
    (4) top -> . top func_decl stmt_list END_STMT semi_opt
    (55) stmt_list -> . stmt
    (56) stmt_list -> . stmt_list stmt
    (8) stmt -> . let
    (9) stmt -> . continue_stmt
    (10) stmt -> . break_stmt
    (11) stmt -> . expr_stmt
    (12) stmt -> . global_stmt
    (13) stmt -> . command
    (14) stmt -> . for_stmt
    (15) stmt -> . if_stmt
    (16) stmt -> . null_stmt
    (17) stmt -> . return_stmt
    (18) stmt -> . switch_stmt
    (19) stmt -> . try_catch
    (20) stmt -> . while_stmt
    (72) let -> . expr = expr SEMI
    (32) continue_stmt -> . CONTINUE SEMI
    (33) break_stmt -> . BREAK SEMI
    (63) expr_stmt -> . expr_list SEMI
    (30) global_stmt -> . GLOBAL global_list SEMI
    (27) command -> . ident args SEMI
    (73) for_stmt -> . FOR ident = expr SEMI stmt_list END_STMT
    (74) for_stmt -> . FOR LPAREN ident = expr RPAREN SEMI stmt_list END_STMT
    (67) if_stmt -> . IF expr sep stmt_list_opt elseif_stmt END_STMT
    (68) if_stmt -> . IF expr error stmt_list_opt elseif_stmt END_STMT
    (39) null_stmt -> . SEMI
    (40) null_stmt -> . COMMA
    (31) return_stmt -> . RETURN SEMI
    (34) switch_stmt -> . SWITCH expr semi_opt case_list END_STMT
    (38) try_catch -> . TRY stmt_list CATCH stmt_list END_STMT
    (64) while_stmt -> . WHILE expr SEMI stmt_list END_STMT
    (75) expr -> . ident
    (76) expr -> . end
    (77) expr -> . number
    (78) expr -> . string
    (79) expr -> . colon
    (80) expr -> . matrix
    (81) expr -> . cellarray
    (82) expr -> . expr2
    (83) expr -> . expr1
    (84) expr -> . lambda_expr
    (85) expr -> . NE
    (105) expr -> . LPAREN expr RPAREN
    (106) expr -> . expr FIELD
    (107) expr -> . expr TRANSPOSE
    (108) expr -> . expr LBRACE expr_list RBRACE
    (109) expr -> . expr LBRACE RBRACE
    (110) expr -> . expr LPAREN expr_list RPAREN
    (111) expr -> . expr LPAREN RPAREN
    (59) expr_list -> . exprs
    (60) expr_list -> . exprs COMMA
    (89) ident -> . IDENT
    (91) end -> . END_EXPR
    (90) number -> . NUMBER
    (92) string -> . STRING
    (93) colon -> . COLON
    (100) matrix -> . LBRACKET RBRACKET
    (101) matrix -> . LBRACKET concat_list RBRACKET
    (102) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (103) matrix -> . LBRACKET expr_list RBRACKET
    (104) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (98) cellarray -> . LBRACE RBRACE
    (99) cellarray -> . LBRACE expr_list RBRACE
    (112) expr2 -> . expr AND expr
    (113) expr2 -> . expr ANDAND expr
    (114) expr2 -> . expr BACKSLASH expr
    (115) expr2 -> . expr COLON expr
    (116) expr2 -> . expr DIV expr
    (117) expr2 -> . expr DOT expr
    (118) expr2 -> . expr DOTDIV expr
    (119) expr2 -> . expr DOTEXP expr
    (120) expr2 -> . expr DOTMUL expr
    (121) expr2 -> . expr EQ expr
    (122) expr2 -> . expr EXP expr
    (123) expr2 -> . expr GE expr
    (124) expr2 -> . expr GT expr
    (125) expr2 -> . expr LE expr
    (126) expr2 -> . expr LT expr
    (127) expr2 -> . expr MINUS expr
    (128) expr2 -> . expr MUL expr
    (129) expr2 -> . expr NE expr
    (130) expr2 -> . expr OR expr
    (131) expr2 -> . expr OROR expr
    (132) expr2 -> . expr PLUS expr
    (94) expr1 -> . MINUS expr
    (95) expr1 -> . PLUS expr
    (96) expr1 -> . NEG expr
    (97) expr1 -> . HANDLE ident
    (88) lambda_expr -> . HANDLE lambda_args expr
    (61) exprs -> . expr
    (62) exprs -> . exprs COMMA expr

    FUNCTION        reduce using rule 1 (top -> .)
    $end            reduce using rule 1 (top -> .)
    CONTINUE        shift and go to state 19
    BREAK           shift and go to state 35
    GLOBAL          shift and go to state 22
    FOR             shift and go to state 13
    IF              shift and go to state 47
    SEMI            shift and go to state 41
    COMMA           shift and go to state 43
    RETURN          shift and go to state 8
    SWITCH          shift and go to state 31
    TRY             shift and go to state 15
    WHILE           shift and go to state 24
    NE              shift and go to state 30
    LPAREN          shift and go to state 46
    IDENT           shift and go to state 12
    END_EXPR        shift and go to state 20
    NUMBER          shift and go to state 36
    STRING          shift and go to state 45
    COLON           shift and go to state 11
    LBRACKET        shift and go to state 1
    LBRACE          shift and go to state 17
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    NEG             shift and go to state 21
    HANDLE          shift and go to state 37

    expr_list                      shift and go to state 9
    number                         shift and go to state 23
    return_stmt                    shift and go to state 25
    switch_stmt                    shift and go to state 26
    break_stmt                     shift and go to state 39
    lambda_expr                    shift and go to state 27
    end                            shift and go to state 40
    matrix                         shift and go to state 10
    continue_stmt                  shift and go to state 28
    top                            shift and go to state 29
    cellarray                      shift and go to state 18
    expr2                          shift and go to state 3
    expr1                          shift and go to state 42
    global_stmt                    shift and go to state 44
    string                         shift and go to state 38
    colon                          shift and go to state 7
    stmt                           shift and go to state 14
    for_stmt                       shift and go to state 49
    let                            shift and go to state 16
    expr_stmt                      shift and go to state 5
    stmt_list                      shift and go to state 48
    ident                          shift and go to state 32
    if_stmt                        shift and go to state 6
    expr                           shift and go to state 33
    try_catch                      shift and go to state 34
    exprs                          shift and go to state 50
    while_stmt                     shift and go to state 51
    command                        shift and go to state 52
    null_stmt                      shift and go to state 53

state 1

    (100) matrix -> LBRACKET . RBRACKET
    (101) matrix -> LBRACKET . concat_list RBRACKET
    (102) matrix -> LBRACKET . concat_list SEMI RBRACKET
    (103) matrix -> LBRACKET . expr_list RBRACKET
    (104) matrix -> LBRACKET . expr_list SEMI RBRACKET
    (57) concat_list -> . expr_list SEMI expr_list
    (58) concat_list -> . concat_list SEMI expr_list
    (59) expr_list -> . exprs
    (60) expr_list -> . exprs COMMA
    (61) exprs -> . expr
    (62) exprs -> . exprs COMMA expr
    (75) expr -> . ident
    (76) expr -> . end
    (77) expr -> . number
    (78) expr -> . string
    (79) expr -> . colon
    (80) expr -> . matrix
    (81) expr -> . cellarray
    (82) expr -> . expr2
    (83) expr -> . expr1
    (84) expr -> . lambda_expr
    (85) expr -> . NE
    (105) expr -> . LPAREN expr RPAREN
    (106) expr -> . expr FIELD
    (107) expr -> . expr TRANSPOSE
    (108) expr -> . expr LBRACE expr_list RBRACE
    (109) expr -> . expr LBRACE RBRACE
    (110) expr -> . expr LPAREN expr_list RPAREN
    (111) expr -> . expr LPAREN RPAREN
    (89) ident -> . IDENT
    (91) end -> . END_EXPR
    (90) number -> . NUMBER
    (92) string -> . STRING
    (93) colon -> . COLON
    (100) matrix -> . LBRACKET RBRACKET
    (101) matrix -> . LBRACKET concat_list RBRACKET
    (102) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (103) matrix -> . LBRACKET expr_list RBRACKET
    (104) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (98) cellarray -> . LBRACE RBRACE
    (99) cellarray -> . LBRACE expr_list RBRACE
    (112) expr2 -> . expr AND expr
    (113) expr2 -> . expr ANDAND expr
    (114) expr2 -> . expr BACKSLASH expr
    (115) expr2 -> . expr COLON expr
    (116) expr2 -> . expr DIV expr
    (117) expr2 -> . expr DOT expr
    (118) expr2 -> . expr DOTDIV expr
    (119) expr2 -> . expr DOTEXP expr
    (120) expr2 -> . expr DOTMUL expr
    (121) expr2 -> . expr EQ expr
    (122) expr2 -> . expr EXP expr
    (123) expr2 -> . expr GE expr
    (124) expr2 -> . expr GT expr
    (125) expr2 -> . expr LE expr
    (126) expr2 -> . expr LT expr
    (127) expr2 -> . expr MINUS expr
    (128) expr2 -> . expr MUL expr
    (129) expr2 -> . expr NE expr
    (130) expr2 -> . expr OR expr
    (131) expr2 -> . expr OROR expr
    (132) expr2 -> . expr PLUS expr
    (94) expr1 -> . MINUS expr
    (95) expr1 -> . PLUS expr
    (96) expr1 -> . NEG expr
    (97) expr1 -> . HANDLE ident
    (88) lambda_expr -> . HANDLE lambda_args expr

    RBRACKET        shift and go to state 58
    NE              shift and go to state 30
    LPAREN          shift and go to state 46
    IDENT           shift and go to state 12
    END_EXPR        shift and go to state 20
    NUMBER          shift and go to state 36
    STRING          shift and go to state 45
    COLON           shift and go to state 11
    LBRACKET        shift and go to state 1
    LBRACE          shift and go to state 17
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    NEG             shift and go to state 21
    HANDLE          shift and go to state 37

    expr2                          shift and go to state 3
    lambda_expr                    shift and go to state 27
    ident                          shift and go to state 56
    end                            shift and go to state 40
    string                         shift and go to state 38
    expr_list                      shift and go to state 54
    number                         shift and go to state 23
    concat_list                    shift and go to state 55
    exprs                          shift and go to state 50
    cellarray                      shift and go to state 18
    expr1                          shift and go to state 42
    colon                          shift and go to state 7
    expr                           shift and go to state 57
    matrix                         shift and go to state 10

state 2

    (94) expr1 -> MINUS . expr
    (75) expr -> . ident
    (76) expr -> . end
    (77) expr -> . number
    (78) expr -> . string
    (79) expr -> . colon
    (80) expr -> . matrix
    (81) expr -> . cellarray
    (82) expr -> . expr2
    (83) expr -> . expr1
    (84) expr -> . lambda_expr
    (85) expr -> . NE
    (105) expr -> . LPAREN expr RPAREN
    (106) expr -> . expr FIELD
    (107) expr -> . expr TRANSPOSE
    (108) expr -> . expr LBRACE expr_list RBRACE
    (109) expr -> . expr LBRACE RBRACE
    (110) expr -> . expr LPAREN expr_list RPAREN
    (111) expr -> . expr LPAREN RPAREN
    (89) ident -> . IDENT
    (91) end -> . END_EXPR
    (90) number -> . NUMBER
    (92) string -> . STRING
    (93) colon -> . COLON
    (100) matrix -> . LBRACKET RBRACKET
    (101) matrix -> . LBRACKET concat_list RBRACKET
    (102) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (103) matrix -> . LBRACKET expr_list RBRACKET
    (104) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (98) cellarray -> . LBRACE RBRACE
    (99) cellarray -> . LBRACE expr_list RBRACE
    (112) expr2 -> . expr AND expr
    (113) expr2 -> . expr ANDAND expr
    (114) expr2 -> . expr BACKSLASH expr
    (115) expr2 -> . expr COLON expr
    (116) expr2 -> . expr DIV expr
    (117) expr2 -> . expr DOT expr
    (118) expr2 -> . expr DOTDIV expr
    (119) expr2 -> . expr DOTEXP expr
    (120) expr2 -> . expr DOTMUL expr
    (121) expr2 -> . expr EQ expr
    (122) expr2 -> . expr EXP expr
    (123) expr2 -> . expr GE expr
    (124) expr2 -> . expr GT expr
    (125) expr2 -> . expr LE expr
    (126) expr2 -> . expr LT expr
    (127) expr2 -> . expr MINUS expr
    (128) expr2 -> . expr MUL expr
    (129) expr2 -> . expr NE expr
    (130) expr2 -> . expr OR expr
    (131) expr2 -> . expr OROR expr
    (132) expr2 -> . expr PLUS expr
    (94) expr1 -> . MINUS expr
    (95) expr1 -> . PLUS expr
    (96) expr1 -> . NEG expr
    (97) expr1 -> . HANDLE ident
    (88) lambda_expr -> . HANDLE lambda_args expr

    NE              shift and go to state 30
    LPAREN          shift and go to state 46
    IDENT           shift and go to state 12
    END_EXPR        shift and go to state 20
    NUMBER          shift and go to state 36
    STRING          shift and go to state 45
    COLON           shift and go to state 11
    LBRACKET        shift and go to state 1
    LBRACE          shift and go to state 17
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    NEG             shift and go to state 21
    HANDLE          shift and go to state 37

    lambda_expr                    shift and go to state 27
    ident                          shift and go to state 56
    end                            shift and go to state 40
    string                         shift and go to state 38
    expr                           shift and go to state 59
    number                         shift and go to state 23
    expr2                          shift and go to state 3
    cellarray                      shift and go to state 18
    expr1                          shift and go to state 42
    colon                          shift and go to state 7
    matrix                         shift and go to state 10

state 3

    (82) expr -> expr2 .

    RPAREN          reduce using rule 82 (expr -> expr2 .)
    FIELD           reduce using rule 82 (expr -> expr2 .)
    TRANSPOSE       reduce using rule 82 (expr -> expr2 .)
    LBRACE          reduce using rule 82 (expr -> expr2 .)
    LPAREN          reduce using rule 82 (expr -> expr2 .)
    AND             reduce using rule 82 (expr -> expr2 .)
    ANDAND          reduce using rule 82 (expr -> expr2 .)
    BACKSLASH       reduce using rule 82 (expr -> expr2 .)
    COLON           reduce using rule 82 (expr -> expr2 .)
    DIV             reduce using rule 82 (expr -> expr2 .)
    DOT             reduce using rule 82 (expr -> expr2 .)
    DOTDIV          reduce using rule 82 (expr -> expr2 .)
    DOTEXP          reduce using rule 82 (expr -> expr2 .)
    DOTMUL          reduce using rule 82 (expr -> expr2 .)
    EQ              reduce using rule 82 (expr -> expr2 .)
    EXP             reduce using rule 82 (expr -> expr2 .)
    GE              reduce using rule 82 (expr -> expr2 .)
    GT              reduce using rule 82 (expr -> expr2 .)
    LE              reduce using rule 82 (expr -> expr2 .)
    LT              reduce using rule 82 (expr -> expr2 .)
    MINUS           reduce using rule 82 (expr -> expr2 .)
    MUL             reduce using rule 82 (expr -> expr2 .)
    NE              reduce using rule 82 (expr -> expr2 .)
    OR              reduce using rule 82 (expr -> expr2 .)
    OROR            reduce using rule 82 (expr -> expr2 .)
    PLUS            reduce using rule 82 (expr -> expr2 .)
    =               reduce using rule 82 (expr -> expr2 .)
    COMMA           reduce using rule 82 (expr -> expr2 .)
    SEMI            reduce using rule 82 (expr -> expr2 .)
    RBRACKET        reduce using rule 82 (expr -> expr2 .)
    RBRACE          reduce using rule 82 (expr -> expr2 .)
    CASE            reduce using rule 82 (expr -> expr2 .)
    OTHERWISE       reduce using rule 82 (expr -> expr2 .)
    END_STMT        reduce using rule 82 (expr -> expr2 .)
    error           reduce using rule 82 (expr -> expr2 .)


state 4

    (95) expr1 -> PLUS . expr
    (75) expr -> . ident
    (76) expr -> . end
    (77) expr -> . number
    (78) expr -> . string
    (79) expr -> . colon
    (80) expr -> . matrix
    (81) expr -> . cellarray
    (82) expr -> . expr2
    (83) expr -> . expr1
    (84) expr -> . lambda_expr
    (85) expr -> . NE
    (105) expr -> . LPAREN expr RPAREN
    (106) expr -> . expr FIELD
    (107) expr -> . expr TRANSPOSE
    (108) expr -> . expr LBRACE expr_list RBRACE
    (109) expr -> . expr LBRACE RBRACE
    (110) expr -> . expr LPAREN expr_list RPAREN
    (111) expr -> . expr LPAREN RPAREN
    (89) ident -> . IDENT
    (91) end -> . END_EXPR
    (90) number -> . NUMBER
    (92) string -> . STRING
    (93) colon -> . COLON
    (100) matrix -> . LBRACKET RBRACKET
    (101) matrix -> . LBRACKET concat_list RBRACKET
    (102) matrix -> . LBRACKET concat_list SEMI RBRACKET
    (103) matrix -> . LBRACKET expr_list RBRACKET
    (104) matrix -> . LBRACKET expr_list SEMI RBRACKET
    (98) cellarray -> . LBRACE RBRACE
    (99) cellarray -> . LBRACE expr_list RBRACE
    (112) expr2 -> . expr AND expr
    (113) expr2 -> . expr ANDAND expr
    (114) expr2 -> . expr BACKSLASH expr
    (115) expr2 -> . expr COLON expr
    (116) expr2 -> . expr DIV expr
    (117) expr2 -> . expr DOT expr
    (118) expr2 -> . expr DOTDIV expr
    (119) expr2 -> . expr DOTEXP expr
    (120) expr2 -> . expr DOTMUL expr
    (121) expr2 -> . expr EQ expr
    (122) expr2 -> . expr EXP expr
    (123) expr2 -> . expr GE expr
    (124) expr2 -> . expr GT expr
    (125) expr2 -> . expr LE expr
    (126) expr2 -> . expr LT expr
    (127) expr2 -> . expr MINUS expr
    (128) expr2 -> . expr MUL expr
    (129) expr2 -> . expr NE expr
    (130) expr2 -> . expr OR expr
    (131) expr2 -> . expr OROR expr
    (132) expr2 -> . expr PLUS expr
    (94) expr1 -> . MINUS expr
    (95) expr1 -> . PLUS expr
    (96) expr1 -> . NEG expr
    (97) expr1 -> . HANDLE ident
    (88) lambda_expr -> . HANDLE lambda_args expr

    NE              shift and go to state 30
    LPAREN          shift and go to state 46
    IDENT           shift and go to state 12
    END_EXPR        shift and go to state 20
    NUMBER          shift and go to state 36
    STRING          shift and go to state 45
    COLON           shift and go to state 11
    LBRACKET        shift and go to state 1
    LBRACE          shift and go to state 17
    MINUS           shift and go to state 2
    PLUS            shift and go to state 4
    NEG             shift and go to state 21
    HANDLE          shift and go to state 37

    lambda_expr                    shift and go to state 27
    ident                          shift and go to state 56
    end                            shift and go to state 40
    string                         shift and go to state 38
    expr                           shift and go to state 60
    number                         shift and go to state 23
    expr2                          shift and go to state 3
    cellarray                      shift and go to state 18
    expr1                          shift and go to state 42
    colon                          shift and go to state 7
    matrix                         shift and go to state 10

state 5

    (11) stmt -> expr_stmt .

    END_STMT        reduce using rule 11 (stmt -> expr_stmt .)
    CONTINUE        reduce using rule 11 (stmt -> expr_stmt .)
    BREAK           reduce using rule 11 (stmt -> expr_stmt .)
    GLOBAL          reduce using rule 11 (stmt -> expr_stmt .)
    FOR             reduce using rule 11 (stmt -> expr_stmt .)
    IF              reduce using rule 11 (stmt -> expr_stmt .)
    SEMI            reduce using rule 11 (stmt -> expr_stmt .)
    COMMA           reduce using rule 11 (stmt -> expr_stmt .)
    RETURN          reduce using rule 11 (stmt -> expr_stmt .)
    SWITCH          reduce using rule 11 (stmt -> expr_stmt .)
    TRY             reduce using rule 11 (stmt -> expr_stmt .)
    WHILE           reduce using rule 11 (stmt -> expr_stmt .)
    NE              reduce using rule 11 (stmt -> expr_stmt .)
    LPAREN          reduce using rule 11 (stmt -> expr_stmt .)
    IDENT           reduce using rule 11 (stmt -> expr_stmt .)
    END_EXPR        reduce using rule 11 (stmt -> expr_stmt .)
    NUMBER          reduce using rule 11 (stmt -> expr_stmt .)
    STRING          reduce using rule 11 (stmt -> expr_stmt .)
    COLON           reduce using rule 11 (stmt -> expr_stmt .)
    LBRACKET        reduce using rule 11 (stmt -> expr_stmt .)
    LBRACE          reduce using rule 11 (stmt -> expr_stmt .)
    MINUS           reduce using rule 11 (stmt -> expr_stmt .)
    PLUS            reduce using rule 11 (stmt -> expr_stmt .)
    NEG             reduce using rule 11 (stmt -> expr_stmt .)
    HANDLE          reduce using rule 11 (stmt -> expr_stmt .)
    ELSE            reduce using rule 11 (stmt -> expr_stmt .)
    ELSEIF          reduce using rule 11 (stmt -> expr_stmt .)
    CATCH           reduce using rule 11 (stmt -> expr_stmt .)
    FUNCTION        reduce using rule 11 (stmt -> expr_stmt .)
    $end            reduce using rule 11 (stmt -> expr_stmt .)
    CASE            reduce using rule 11 (stmt -> expr_stmt .)
    OTHERWISE       reduce using rule 11 (stmt -> expr_stmt .)


state 6

    (15) stmt -> if_stmt .

    END_STMT        reduce using rule 15 (stmt -> if_stmt .)
    CONTINUE        reduce using rule 15 (stmt -> if_stmt .)
    BREAK           reduce using rule 15 (stmt -> if_stmt .)
    GLOBAL          reduce using rule 15 (stmt -> if_stmt .)
    FOR             reduce using rule 15 (stmt -> if_stmt .)
    IF              reduce using rule 15 (stmt -> if_stmt .)
    SEMI            reduce using rule 15 (stmt -> if_stmt .)
    COMMA           reduce using rule 15 (stmt -> if_stmt .)
    RETURN          reduce using rule 15 (stmt -> if_stmt .)
    SWITCH          reduce using rule 15 (stmt -> if_stmt .)
    TRY             reduce using rule 15 (stmt -> if_stmt .)
    WHILE           reduce using rule 15 (stmt -> if_stmt .)
    NE              reduce using rule 15 (stmt -> if_stmt .)
    LPAREN          reduce using rule 15 (stmt -> if_stmt .)
    IDENT           reduce using rule 15 (stmt -> if_stmt .)
    END_EXPR        reduce using rule 15 (stmt -> if_stmt .)
    NUMBER          reduce using rule 15 (stmt -> if_stmt .)
    STRING          reduce using rule 15 (stmt -> if_stmt .)
    COLON           reduce using rule 15 (stmt -> if_stmt .)
    LBRACKET        reduce using rule 15 (stmt -> if_stmt .)
    LBRACE          reduce using rule 15 (stmt -> if_stmt .)
    MINUS           reduce using rule 15 (stmt -> if_stmt .)
    PLUS            reduce using rule 15 (stmt -> if_stmt .)
    NEG             reduce using rule 15 (stmt -> if_stmt .)
    HANDLE          reduce using rule 15 (stmt -> if_stmt .)
    ELSE            reduce using rule 15 (stmt -> if_stmt .)
    ELSEIF          reduce using rule 15 (stmt -> if_stmt .)
    CATCH           reduce using rule 15 (stmt -> if_stmt .)
    FUNCTION        reduce using rule 15 (stmt -> if_stmt .)
    $end            reduce using rule 15 (stmt -> if_stmt .)
    CASE            reduce using rule 15 (stmt -> if_stmt .)
    OTHERWISE       reduce using rule 15 (stmt -> if_stmt .)


state 7

    (79) expr -> colon .
